# lineagekv

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: experiments.yaml  models.yaml
data/: DATASETS.md  dataset_manifest.json
demo/: kv_memory_repair_demo.html
docs/: README.md  kv_address_content_causal_map.md  kv_cache_repair_technical_report.md  kv_lineage_targeting_validity.md  kv_memory_lineage_protocol.md  kv_memory_store_lineage_integration.md  kv_repair_phase_diagram.md
paper/: stale_memory_kv_cache_repair.tex
scripts/: adapt_external.py  analyze.py  analyze_answer_similarity.py  analyze_kv_identifiability.py  analyze_kv_tradeoffs.py  audit_evidence_citations.py  audit_git_doc_phrase_quality.py  audit_kv_detector.py  audit_lineage_targeting_ablations.py  audit_model_currentness_detector.py  audit_public_release_dataset.py  audit_query_ref_targeting_ablations.py  audit_retrieval_recall.py  audit_text_timestamp_targeting_ablations.py  bootstrap_metrics.py  build_kv_causal_map.py  build_kv_runtime_curve.py  build_public_release_dataset.py  build_universality_trace_benchmark.py  demo.py  demo_memory_store_cache_repair.py  fetch_datasets.py  generate_v0.py  kv_mlx_value_ablation_probe.py  kv_value_ablation_probe.py  make_adversarial_kv_dataset.py  make_agent_memory_action_kv_dataset.py  make_agent_memory_long_context_kv_dataset.py  make_agent_memory_messy_kv_dataset.py  make_agent_memory_update_kv_dataset.py  make_balanced_jsonl_probe.py  make_cue_stripped_kv_dataset.py  make_git_doc_evidence_choice_kv_dataset.py  (+30 more)
tests/: test_pipeline.py  (+6 more)
(+75 files in other folders)
